--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-dom-event",
+  "name": "next-zepto-event",
   "version": "1.0.0",
   "description": "Dom event module based on next toolkit.",
   "main": "dist/Event.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/afeiship/next-dom-event.git"
+    "url": "git+https://github.com/afeiship/next-zepto-event.git"
   },
   "keywords": [
     "event",
@@ -24,7 +24,7 @@
     "gulp-uglify": "^1.5.1"
   },
   "bugs": {
-    "url": "https://github.com/afeiship/next-dom-event/issues"
+    "url": "https://github.com/afeiship/next-zepto-event/issues"
   },
-  "homepage": "https://github.com/afeiship/next-dom-event#readme"
+  "homepage": "https://github.com/afeiship/next-zepto-event#readme"
 }
